# half_float

./: CMakeLists.txt  README.txt  cpfp.hpp  half.hpp  main.cpp
src/: cpfp.hpp  main.cpp
